<resources>
    <string name="vm2g">VM2G</string>
    <string name="vitejte_v_aplikaci">Vítejte v Aplikaci Průvodce cvičením Vojtovy metody 2. generace. Seznámíme Vás se vším potřebným pro provádění efektivní terapie.</string>
    <string name="zde_p_idejte_nov_ho_pacienta">Zde přidejte nového pacienta</string>
    <string name="p_idat_nov_ho_pacienta">Přidat nového pacienta</string>
    <string name="jm_no_pacienta">Jméno pacienta</string>
    <string name="p_idat_pacienta">Přidat pacienta</string>
    <string name="terapie">Terapie</string>
    <string name="konzultace">Konzultace</string>
    <string name="literatura">Literatura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="za_t_novou_terapii">Začít novou terapii</string>
    <string name="instrukce_pro_odeslani_cviceni">Pro konzultace terapie odešlete záznam prováděného cvičení. Mějte na paměti, že tělo pacienta musí být celé v záběru</string>
    <string name="zah_jit_z_znam_cvi_en">Zahájit záznam cvičení</string>
    <string name="odeslat_dost">Odeslat žádost</string>
    <string name="zaruceni_rychle_odpovedi">Na konzultace se snažíme odpovědět co nejrychleji, ne vždy na ně máme čas. Odpověď zaručujeme do jednoho týdne.</string>
    <string name="zpr_va_o_cvi_en">Zpráva o cvičení</string>
    <string name="zah_jit_terapii">Zahájit terapii</string>
    <string name="pripravte_se_na_terapii">Připravte se na terapii účinnou rehabilitační metodou. Cesta to nebude jednoduchá, čeká nás hodně práce, ale výsledky budou stát za to.</string>
    <string name="nastavit_terapii">Nastavit terapii</string>
    <string name="_1">1.</string>
    <string name="pokracovat">Pokračovat</string>
    <string name="kolikrat_denn_budete_cvicit">Kolikrát denně budete cvičit?</string>
    <string name="zacit_s_terapi">Začít s terapií</string>
    <string name="v_k">Věk</string>
    <string name="hmotnost">Hmotnost</string>
    <string name="napi_te_svoji_dost">Napište svoji žádost</string>
    <string name="terapie_nastavena">Terapie nastavena</string>
    <string name="jdeme_na_to">Jdeme na to!</string>
    <string name="vypl_te_as">Vyplňte čas</string>
    <string name="_00_00">00:00</string>
    <string name="vyberte_preferovan_as_cvi_en">Vyberte preferovaný čas cvičení</string>
    <string name="vyberte_cvi_c_polohy">Vyberte cvičící polohy</string>
    <string name="dokon_it_nastaven_terapie">Dokončit nastavení terapie</string>
    <string name="doporu_en_cvi_c_polohy">Doporučené cvičící polohy</string>
    <string name="zapojte_se_do_v_zkumu">Zapojte se do výzkumu</string>
    <string name="zapojen_do_v_zkumu">Zapojení do výzkumu je jednoduché, vyžaduje od vás trochu práce navíc, pomůžete ostatním rodičům i dětem.</string>
    <string name="chci_se_zapojit">Chci se zapojit</string>
    <string name="pokra_ovat_v_terapii">Pokračovat v terapii</string>
    <string name="nastavit_novou_terapii">Nastavit novou terapii</string>
    <string name="snimejte_cele_telo">Snímejte celé tělo pacienta, dbejte na to, aby se po celou dobu snímání nedostalo mimo záběr. Ideálně umístěte mobilní telefon do stativu.</string>
    <string name="zpet">Zpět</string>
    <string name="snimani_2">Snímejte provádění terapie minimálně minutu, abychom stihli zaznamenat průběh reflexu. Čas Vám změříme</string>
    <string name="cas_snimani">Čas snímání</string>
    <string name="_1_minuta">1 minuta</string>
    <string name="snimani_obou_stran">Snímání obou stran</string>
    <string name="_1_1_minuta">1+1 minuta</string>
    <string name="nasn_mejte_prov_d_n_reflexu_na_obou_stran_ch_reflex_prob_h_n_kdy_rozd_ln_as_sn_m_n_v_m_op_t_zm_me">Nasnímejte provádění reflexu na obou stranách, reflex probíhá někdy rozdílně. Čas snímání Vám opět změříme.</string>
    <string name="vyzkum_zahajen">Výzkum zahájen</string>
    <string name="skaceme_do_toho_rovn_ma_nohama">Skáčeme do toho rovnýma nohama!</string>
    <string name="video_bylo_uspesne_vytvoreno">Video bylo úspěšně vytvořeno!</string>
    <string name="vase_nahran_data_pom_ou_dal_m_pacient_m">Vaše nahraná data pomůžou dalším pacientům</string>
    <string name="pokracovat_ve_cvi_en">Pokračovat ve cvičení</string>
    <string name="video_nebylo_korektn_nahr_no">Video nebylo korektně nahráno!</string>
    <string name="prosime_nahrajte_video_znovu">Prosíme, nahrajte video znovu. Soustřeďte se na udržení postavy v záběru.</string>
    <string name="znovu_nahrat_video">Znovu nahrát video</string>
    <string name="vyberte_pr_vod_terapi">Vyberte průvod terapií, kde vám ukážame, jak pacienta pro cvičení připravit, nebo do toho můžeme skočit rovnýma nohama</string>
    <string name="ukazat_pripravu">Ukázat přípravu</string>
    <string name="_1_4_poloh">1/4 poloh / 5 minut (20 minut celkem) \n Stimulace zón záhlavní a čelistní</string>
    <string name="pritlak_provadejte">Přítlak provádějte pod bradou a na spodní straně týlu hlavy</string>
    <string name="zmente_polohu">Změňte polohu</string>
    <string name="zmenit_polohu">Změnit polohu</string>
    <string name="uspesne_jste_dokoncili_cviceni">Úspěšně jste dokončili cvičení</string>
    <string name="cvicen_v_poradku">Cvičení v pořádku</string>
    <string name="dalsi_planovan_cviceni">Další plánovaná cvičení</string>
    <string name="zprava_o_cviceni">Zpráva o cvičení</string>
    <string name="doplnte_informace_o_cvi_en">Doplňte informace o cvičení</string>
    <string name="uspesne_jste_dokoncili_cviceni_long_message">Úspěšně jste dokončili cvičení, pokud byl ve cvičení nějaký problém, cokoli co je důležité zaznamenat udělejte to zde, abychom to mohli vzít v úvahu při dalším plánování terapie.</string>
    <string name="zaznamenat">Zaznamenat</string>
    <string name="terapii_d_l_te_skv_le">Terapii děláte skvěle!</string>
    <string name="_30_dn_pravideln_ho_cvi_en">30 dní pravidelného cvičení</string>
    <string name="zahajit_cviceni">Zahájit cvičení</string>
    <string name="proveden_cvi_en">Provedená cvičení</string>
    <string name="planovan_cvi_en">Plánovaná cvičení</string>
    <string name="datum_narozeni">Datum narození</string>
</resources>